# zuu_json

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compile_commands.json
.github/: ci-pipeline.yml
.github/workflows/: ci-pipeline.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  ROADMAP.md  method.md
example/: example_array.cpp  example_basic.cpp  example_iterator.cpp  example_nested_object.cpp  example_parsing_error.hpp  example_sort.cpp  example_strict.cpp
include/zuu_json/: json.hpp
include/zuu_json/core/: engine.hpp  error.hpp
include/zuu_json/models/: json.hpp  policies.hpp  value.hpp
include/zuu_json/utils/: error_translator.hpp
internal/allocators/: fast_stack.hpp  storage.hpp
internal/constants/: general.hpp  simd.hpp  swar.hpp  token_lut.hpp
internal/enums/: json_type.hpp  token_kind.hpp  token_type.hpp
internal/lexer/: lexer.hpp  lexer_base.hpp  policies.hpp
internal/lexer/engine/: avx2.hpp  swar.hpp
internal/lookups/: avx2.hpp  char.hpp  double.hpp  token.hpp
internal/models/: array_view.hpp  depth_guard.hpp  fast_stack.hpp  hint.hpp  json_member.hpp  json_value.hpp  lookup.hpp  member_view.hpp  object_view.hpp  scalar_storage.hpp  storage.hpp  token.hpp
internal/models/specs/: storage.hpp
internal/models/views/: array.hpp  member.hpp  object.hpp
internal/parser/: parser.hpp  parser_base.hpp  policies.hpp
internal/parser/engine/: avx2.hpp  avx2_engine.hpp  swar.hpp  swar_engine.hpp
internal/serializer/: serializer.hpp
internal/tokenizer/: policies.hpp  tokenizer.hpp  tokenizer_base.hpp
internal/tokenizer/engine/: avx2_engine.hpp  swar_engine.hpp
internal/traits/: hint_trait.hpp  lookup_trait.hpp  meta_trait.hpp  parser_trait.hpp
internal/utils/: benchmark.hpp  bit.hpp  compiler.hpp  filesystem.hpp  fs_util.hpp  parse_double.hpp  parse_int.hpp  parser.hpp  strings.hpp  swar.hpp  timer.hpp
samples/: github_events.json  literal.json  update-center.json
scripts/: benchmark.ps1  dev.ps1  fetch-samples.ps1  get-sample-pack.bat
src/: main.cpp
src/allocators/: storage.cpp
src/models/: array_view.cpp  json.cpp  member_view.cpp  object_view.cpp  storage.cpp  value.cpp
src/models/views/: array.cpp  member.cpp  object.cpp
src/parser/: parser.cpp
src/serializer/: serializer.cpp
src/tokenizer/: tokenizer.cpp
tests/: benchmark.cpp  bm_dom.cpp  bm_error_path.cpp  bm_lexer.cpp  bm_main.cpp  bm_number.cpp  bm_parser.cpp  bm_pipeline..cpp  bm_pipeline.cpp  bm_serializer.cpp  bm_storage.cpp  bm_strings.cpp  bm_tokenizer.cpp
